--- a/README.adoc
+++ b/README.adoc
@@ -15,6 +15,9 @@ for now it's main use is to show bugs, design issues, GitHub limitations
 and other differences from http://powerman.name/doc/asciidoc[how Asciidoc
 cheatsheet should really looks like].
 
+GitHub Wiki has own limitations, check
+https://github.com/powerman/asciidoc-cheatsheet/wiki[this cheatsheet in wiki].
+
 
 == Attributes
 
