--- a/README.adoc
+++ b/README.adoc
@@ -16,7 +16,7 @@ and other differences from http://powerman.name/doc/asciidoc[how Asciidoc
 cheatsheet should really looks like].
 
 GitHub Wiki has own limitations, check
-https://github.com/powerman/asciidoc-cheatsheet/wiki[this cheatsheet in wiki].
+https://github.com/powerman/asciidoc-cheatsheet/wiki[this cheatsheet in wiki]. +
 GitHub Gist has own limitations, check
 https://gist.github.com/powerman/d56b2675dfed38deb298[this cheatsheet in gist].
 
